examples/test/testpolicy106.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy106
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key23: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value47
          key31: value14
          key9: value4
      podSelector:
        matchLabels:
          key32: value19
